--- a/python/picamera/동여상만들기.md
+++ b/python/picamera/동여상만들기.md
@@ -1,7 +1,8 @@
-동영상 만들때 사용하는 명령어 
+==== 동영상 만들때 사용하는 명령어 ==== 
 
+<pre><code>
 ffmpeg -r 16 -f image2 -start_number 10 -i image%03d.png -vframes 100 -vcodec libx264 -pix_fmt yuv420p -b:v 1600k test.mp4
-
+</code>
 ffmpeg : 동영상을 만드는 프로그램.
 -r 16: 동영상 1초에 16장 사진 사용
 -f image2: 사용 이미지, 해상도, 픽셀 정보를 첫 이미지에서 참조
@@ -13,3 +14,4 @@ ffmpeg : 동영상을 만드는 프로그램.
 -crf 25: 동영상 압출 손실 (기본 23, 적을수로 좋음) 지정
 -b:v 1600k: 초당 1600kbit  정보 사용
 test.mp4: 출력 파일
+</pre>
