--- a/python/picamera/동영상만들기.md
+++ b/python/picamera/동영상만들기.md
@@ -1,6 +1,8 @@
 #### 동영상 만들때 사용하는 명령어 #### 
 
 <pre><code>
+cd ~/camera
+
 ffmpeg -r 16 -f image2 -start_number 10 -i image%04d.png -vframes 100 -vcodec libx264 -pix_fmt yuv420p -b:v 1600k test.mp4
 </code>
 ffmpeg : 동영상을 만드는 프로그램.
