--- a/python/picamera/동영상만들기.md
+++ b/python/picamera/동영상만들기.md
@@ -16,4 +16,10 @@ ffmpeg : 동영상을 만드는 프로그램.
 -crf 25: 동영상 압출 손실 (기본 23, 적을수로 좋음) 지정
 -b:v 1600k: 초당 1600kbit  정보 사용
 test.mp4: 출력 파일
+
+
+<code>
+ffmpeg -i test.mp4 -vf "transpose=1" test90.mp4
+</code>
+
 </pre>
