--- a/python/picamera/동영상만들기.md
+++ b/python/picamera/동영상만들기.md
@@ -21,5 +21,9 @@ test.mp4: 출력 파일
 <code>
 ffmpeg -i test.mp4 -vf "transpose=1" test90.mp4
 </code>
+0 = 90CounterCLockwise and Vertical Flip (default) 
+1 = 90 시계방향 
+2 = 90 반시계방향 
+3 = 90 시계방향 + 위아래 뒤집기
 
 </pre>
